--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -13,4 +13,4 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1000000
 
 # System
 # length <= 16
-CONFIG_ZMK_KEYBOARD_NAME="Acyco's Split Keyboard"
+CONFIG_ZMK_KEYBOARD_NAME="Acyco's Keyboard"
